<resources>
    <string name="app_name">RouterController</string>
    <string name="status">Status</string>
    <string name="tools">Tools</string>
    <string name="settings">Settings</string>
    <string name="speed_chart">Speed Chart</string>
    <string name="status_speed_reverse">Speed reverse</string>
    <string name="connector_info">Connector info</string>
    <string name="IP_address">IP_address</string>
    <string name="Port">Port</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="upload">▲ 0.0 B/s</string>
    <string name="download">▼ 0.0 B/s</string>
    <string name="reconnect">Reconnect</string>
    <string name="general">General</string>
    <string name="connector_type">Connector type</string>
    <string name="uci">UCI</string>
    <string name="nvram">NVRAM</string>
    <string name="speed_dev">Network speed device</string>
    <string name="br0">br0</string>
    <string name="path">Path</string>
    <string name="default_path">default</string>

    <string name="main_menu">Main bar menu</string>

    <string name="connection_failed">Connection failed</string>
    <string name="connecting">Connecting&#8230;</string>
    <string name="not_connect">Not connect yet, try later</string>

    <string name="change_settings">Change Settings</string>
    <string name="shanxun">ShanXun</string>
    <string name="command_line">Command Line</string>
    <string name="command">Command</string>
    <string name="command_bundle">Command Bundle</string>
    <string name="update_time">Update Time</string>
    <string name="upload_files">Upload Files</string>

    <string name="type_command">> Type your command here</string>
    <string name="type_setting">> Type setting or value </string>
    <string name="try_to_get">Try to get you want&#8230;</string>
    <string name="cant_find_config">Try to enter more info, if can\'t get</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="phone_number_hint_manual">Password</string>
    <string name="sx_passwd_config_name_hint">Password Config Name</string>
    <string name="sx_restart_command">Restart Network Command</string>
    <string name="sx_display_help_hint">Tips: \n 1. If you get trouble for the \"Phone Number\" option, just leave blank and set the number you want to get code to default.\n
        2. You can get the config by the \"Changing Settings\" module, and if you have more than one config, connect them with \" ; \" , like \"wan0_passwd;wan1_passwd\".\n
        3. Some commands for restart network: \nOpenWrt(LEDE/Pandora): /etc/init.d/network reload\nAsuswrt(Merlin): /sbin/service restart_wan\nelse: you can search it on Google or just use \"shutdown -r now\" to reboot you device</string>
    <string name="commit_error">Make sure you set the password config name and command.</string>
    <string name="empty_phone_number">Make sure you set the Phone Number.</string>
    <string name="empty_password">ERROR: Empty password.</string>
    <string name="no_permission">ERROR: Not enough permissions.</string>
    <string name="wrong_phone_number">Send SMS ERROR: Make sure you set right number.</string>
    <string name="no_permission_phone_state">Send SMS ERROR: No permission to read phone state</string>
    <string name="no_permission_for_sms">Send SMS ERROR: No permission to send sms or receive sms.</string>
    <string name="set_phone_number_to_default">4. If your phone support dual SIM, make sure the number you can get the password is default for SMS.\n</string>
    <string name="commit">Commit</string>
    <string name="auto">Auto</string>
    <string name="manual">Manual</string>
    <string name="cancel">Cancel</string>
    <string name="Done">Done</string>
    <string name="back">Back</string>
    <string name="select_file">Select Files</string>
    <string name="search_file">Search files in current path</string>
    <string name="destination_path">Destination Path</string>
    <string name="no_dst_path">No destination path</string>
    <string name="no_file_upload">No file to upload</string>
    <string name="select_dev">Select from these below ▼\n</string>

    <string name="DeviceWithColon">Dev: %s</string>
    <string name="no_file_selected">No file selected</string>
    <string name="disabled">Disabled</string>
    <string name="about_text">GitHub repo: https://github.com/Jimzjy/RouterController</string>
    <string name="license_p">Copyright 2018 Jimzjy\nLicensed under the Apache License, Version 2.0 (the \"License\");\nyou may not use this file except in compliance with the License.\nYou may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License</string>
    <string name="open_source_license">Open Source Licenses</string>
    <string name="version">Version %s</string>
    <string name="about">About</string>
    <string name="help">Help</string>
</resources>
