<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".about.AboutActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/about_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/appBarHeight"
        android:background="@color/colorPrimary"
        app:title="@string/about"/>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/about_replace_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/about_icon"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/vector_drawable_router"
            android:tint="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="contentDescription" />

        <TextView
            android:id="@+id/about_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/about_icon"
            tools:text="Version 1.0" />

        <View
            android:id="@+id/about_line1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line"
            app:layout_constraintBottom_toTopOf="@+id/about_open_source_license" />
        <TextView
            android:id="@+id/about_open_source_license"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="16dp"
            android:text="@string/open_source_license"
            android:background="@drawable/dialog_item_ripple"
            app:layout_constraintTop_toBottomOf="@+id/about_version"/>

        <View
            android:id="@+id/about_line2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line"
            app:layout_constraintBottom_toBottomOf="@+id/about_open_source_license" />

        <TextView
            android:id="@+id/about_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:autoLink="web"
            android:padding="8dp"
            android:text="@string/about_text"
            android:textIsSelectable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/about_open_source_license" />

        <ScrollView
            android:id="@+id/about_license"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/about_text">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:autoLink="web"
                android:text="@string/license_p"
                android:textIsSelectable="true" />
        </ScrollView>

    </android.support.constraint.ConstraintLayout>
</LinearLayout>