<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".tools.LocalFilesActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tools_lf_bar_normal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/appBarHeight"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/tools_lf_bar_back"
            android:layout_width="@dimen/appBarIconSize"
            android:layout_height="@dimen/appBarIconSize"
            android:layout_marginStart="8dp"
            android:background="@drawable/bar_button_ripple"
            android:contentDescription="@string/back"
            android:padding="4dp"
            android:src="@drawable/vector_drawable_baseline_keyboard_arrow_left___px"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tools_lf_bar_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/select_file"
            android:textColor="@color/appBarTitleText"
            android:textSize="@dimen/appBarTitleTextSize"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tools_lf_bar_back"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tools_lf_bar_multi"
        android:layout_width="match_parent"
        android:layout_height="@dimen/appBarHeight"
        android:visibility="gone"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/tools_lf_bar_cancel"
            android:layout_width="@dimen/appBarIconSize"
            android:layout_height="@dimen/appBarIconSize"
            android:layout_margin="8dp"
            android:background="@drawable/bar_button_ripple"
            android:contentDescription="@string/cancel"
            android:padding="4dp"
            android:src="@drawable/vector_drawable_ic_clear_white___px"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/tools_lf_bar_done"
            android:layout_width="@dimen/appBarIconSize"
            android:layout_height="@dimen/appBarIconSize"
            android:layout_margin="8dp"
            android:background="@drawable/bar_button_ripple"
            android:contentDescription="@string/Done"
            android:padding="4dp"
            android:src="@drawable/vector_drawable_ic_done_white___px"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/tools_lf_search_ET_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tools_lf_searchET_height"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="@dimen/tools_lf_searchET_marginTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/tools_lf_search_ET"
            android:layout_width="match_parent"
            android:layout_height="@dimen/tools_lf_searchET_height"
            android:paddingStart="8dp"
            android:paddingEnd="32dp"
            android:background="@null"
            android:hint="@string/search_file"
            android:inputType="text"
            android:imeOptions="actionSend" />
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/tools_lf_search_BT"
        android:layout_width="@dimen/tools_lf_searchBT_size"
        android:layout_height="@dimen/tools_lf_searchBT_size"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/search_file"
        android:elevation="8dp"
        android:src="@drawable/vector_drawable_ic_search_black___px"
        android:tint="@color/tools_gray"
        app:layout_constraintBottom_toBottomOf="@+id/tools_lf_search_ET_layout"
        app:layout_constraintEnd_toEndOf="@+id/tools_lf_search_ET_layout"
        app:layout_constraintTop_toTopOf="@+id/tools_lf_search_ET_layout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tools_lf_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tools_lf_search_ET_layout"
        tools:listitem="@layout/item_file" />
</androidx.constraintlayout.widget.ConstraintLayout>