<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".tools.fragments.CommandFragment">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/tools_command_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tools_bar_height"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/tools_command_time"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/update_time"
            android:backgroundTint="#E0F2F1"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/tools_command_bundle"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/command_bundle"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <EditText
        android:id="@+id/tools_command_edit_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tools_command_height"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/tools_command_border"
        android:hint="@string/type_command"
        android:inputType="text"
        android:imeOptions="actionSend"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tools_command_bar" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:background="@color/tools_command_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tools_command_edit_text" >

        <TextView
            android:id="@+id/tools_command_display_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </ScrollView>
</android.support.constraint.ConstraintLayout>