<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".tools.fragments.FileFragment">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/tools_file_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tools_bar_height"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent">
        <Button
            android:id="@+id/tools_file_select_BT"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/tools_command_time_BT"
            android:text="@string/select_file"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <EditText
        android:id="@+id/tools_file_dst_ET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:hint="@string/destination_path"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tools_file_bar" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/tools_file_rv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tools_file_rv_height"
        android:paddingTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tools_file_dst_ET"
        tools:listitem="@layout/item_selected_files"/>

    <Button
        android:id="@+id/tools_file_commit_BT"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tools_file_commit_height"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_corner_background"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/upload_files"
        android:textColor="@color/appBarTitleText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tools_file_rv" />

    <ProgressBar
        android:id="@+id/tools_file_progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tools_file_commit_BT" />

    <ScrollView
        android:id="@+id/tools_file_sv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/tools_command_background"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tools_file_commit_BT">

        <TextView
            android:id="@+id/tools_file_out_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>
</android.support.constraint.ConstraintLayout>